--- a/data/htm/2013_1_normal_korean.htm
+++ b/data/htm/2013_1_normal_korean.htm
@@ -56,7 +56,7 @@
 <td class="pstyle2">¿ù&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">003-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è½ÂÇö&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -69,7 +69,7 @@
 <td class="pstyle2">¼ö&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">ÀÌ·Ð&nbsp;</td>
 <td class="pstyle2">003-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">±è½ÂÇö&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
