--- a/data/htm/2013_1_normal_special.htm
+++ b/data/htm/2013_1_normal_special.htm
@@ -144,9 +144,9 @@
 <td class="pstyle2">신입생세미나&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-1-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">Hejtmanek Milan&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -214,7 +214,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">정근식&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -227,7 +227,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">계승혁&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -253,7 +253,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">강봉균&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -266,7 +266,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이창복&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -422,7 +422,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Junpei KIMURA&nbsp;</td>
 <td class="pstyle2">17&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -435,7 +435,7 @@
 <td class="pstyle2">083-603&nbsp;</td>
 <td class="pstyle2">이정상&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -448,7 +448,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">손환철&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -487,7 +487,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">윤영호&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -500,7 +500,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박태균&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -641,7 +641,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">강상경&nbsp;</td>
+<td class="pstyle2">조비룡&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -773,7 +773,7 @@
 <td class="pstyle2">152-1-208&nbsp;</td>
 <td class="pstyle2">김태완&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.013&nbsp;</td>
@@ -1072,7 +1072,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">강대중&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1085,7 +1085,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">민경덕&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1098,7 +1098,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1111,7 +1111,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">홍종호&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1124,7 +1124,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">양현아&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">수강제한&nbsp;</td></tr>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.108&nbsp;</td>
