--- a/data/htm/2014_1_normal_art.htm
+++ b/data/htm/2014_1_normal_art.htm
@@ -19,7 +19,7 @@
    
    <br>
    <table width=95% align=center cellpadding=3 cellspacing=0 border=1>
-<tr height="22" ><td align=right width="15%">학년도</td>
+<tr height="22" ><td align=right width="15%">년도</td>
 <td align=left>2014</td>
 <td align=right width="15%">학기</td>
 <td align=left></td></tr>
@@ -34,16 +34,16 @@
 <TABLE width=95% align=center border=1 cellspacing=0 cellpadding=0 class = tabletype3 bgcolor=#CFCFCF>
 <TR height=22 align=center  bgcolor=#DFE4F0>
 <TD class=pstyle1 align=center width=5%>학년</TD>
-<TD class=pstyle1 align=center width=5%>교과목번호</TD>
+<TD class=pstyle1 align=center width=5%>교과목<BR>번호</TD>
 <TD class=pstyle1 align=center width=10%>강좌번호</TD>
 <TD class=pstyle1 align=center width=20%>강좌명</TD>
 <TD class=pstyle1 align=center width=5%>교과구분</TD>
-<TD class=pstyle1 align=center width=10%>학점-강의시간-실험시간</TD>
+<TD class=pstyle1 align=center width=10%>학점-강의시간<BR>-실험시간</TD>
 <TD class=pstyle1 align=center width=10%>교시</TD>
 <TD class=pstyle1 align=center width=5%>구분</TD>
 <TD class=pstyle1 align=center width=10%>강의실</TD>
 <TD class=pstyle1 align=center width=10%>담당교수</TD>
-<TD class=pstyle1 align=center width=5%>수강정원</TD>
+<TD class=pstyle1 align=center width=5%>수강<BR>정원</TD>
 <TD class=pstyle1 align=center width=5%>비고</TD>
 </TR>
 
